--- a/ImageRepo/Views/Home/Index.cshtml
+++ b/ImageRepo/Views/Home/Index.cshtml
@@ -3,15 +3,36 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-
+<link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Add Some images to your repository!</p>
 
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-        Add Image
-    </button>
+    <div class="row">
+        <div class="input-group col-md-4">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+                Add Image
+            </button>
+        </div>
+        <!-- Search form -->
+        <div class="input-group col-md-4 ml-auto" style="max-width:fit-content;">
+            @using (Html.BeginForm("Index",
+                   "Home",
+                   FormMethod.Get))
+            {
+
+
+                <div class="input-group">
+                    <div class="form-outline">
+                        <input class="form-control py-2" type="search" name="search" id="search">
+                    </div>
+                    <button class="btn btn-primary" type="submit">Search</button>
+                </div>
+            }
+        </div>
+    </div>
+    <br />
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -24,33 +45,16 @@
                     </button>
                 </div>
                 <div class="modal-body">
-
-                    <!-- <form>
-                        <div class="form-group">
-                            <label for="exampleFormControlFile1">Add an Image</label>
-                            <div class="form-group">
-                                <input type="file" class="form-control-file" id="exampleFormControlFile1">
-                            </div>
-
-                            <div class="form-group">
-                                <label for="exampleFormControlTextarea1">Description</label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="2"></textarea>
-                            </div>
-                                <button type="submit" class="btn btn-primary">Submit</button>
-                            </div>
-                    </form>
-                       -->
                     @using (Html.BeginForm("Index",
-                        "Home",
-                        FormMethod.Post,
-                        new { enctype = "multipart/form-data" }))
+                  "Home",
+                  FormMethod.Post,
+                  new { enctype = "multipart/form-data" }))
                     {
                         <label for="file">Upload Image:</label>
                         <input type="file" name="Image" id="Image" /><br><br>
                         <input type="text" name="Description" id="Description" /><br><br>
                         <input type="submit" value="Upload Image" />
                         <br><br>
-                        @ViewBag.Message
                     }
 
                 </div>
@@ -61,7 +65,7 @@
         </div>
     </div>
 
-    <table class="table">
+    <table id="example" class="table">
         <thead>
             <tr>
                 <th>
@@ -81,13 +85,7 @@
             {
                 <tr>
                     <td>
-
-                        <!---Show the image-->
-                        <!--Make Image clickable-->
-                        <a href="@("Images/")">
-                            <img src="@("~/"+item.Path)" asp-append-version="true" width="200" height="200" />
-                        </a>
-
+                        <img src="@("~/"+item.Path)" asp-append-version="true" width="200" height="200" />
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Name)
@@ -96,9 +94,8 @@
                         @Html.DisplayFor(modelItem => item.Description)
                     </td>
                     <td>
-                        <a asp-action="Edit" asp-route-id="">Edit</a> |
                         <form asp-action="Delete">
-                            <input type="hidden" asp-for="@(item._id)" />
+                            <input type="hidden" value="@(item._id)" name="id" id="id" />
                             <input type="submit" value="Delete" class="btn btn-danger" />
                         </form>
                     </td>
@@ -108,3 +105,10 @@
     </table>
 
 </div>
+@section Scripts
+{
+    <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
+    <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
+    
+    
+}
