Added tests and bug fixes

--- a/ImageRepo/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ImageRepo/Areas/Identity/Pages/Account/Login.cshtml
@@ -54,7 +54,7 @@
                 {
                         <div>
                             <p>
-                                I decided to build a web application that where the user could upload images to the service and have them displayed in browser.
+                                I decided to build a web application where the user could upload images to the service and have them displayed in browser.
 
                             </p>
                             <p>
@@ -64,16 +64,7 @@
                                 The image meta data is strored in a free mongoDB cluster collection.
                             </p>
                             <p>
-                                Sign in with and already created user:
-                            </p>
-                            <p>
-                                User: admin@admin.com
-                            </p>
-                            <p>
-                                Password: Test12345!
-                            </p>
-                            <p>
-                                Or register a new one.
+                                Register a new user then sign in to access repo.
                             </p>
 
                             <p>
