--- a/ImageRepo/Views/Home/Index.cshtml
+++ b/ImageRepo/Views/Home/Index.cshtml
@@ -21,8 +21,6 @@
                    "Home",
                    FormMethod.Get))
             {
-
-
                 <div class="input-group">
                     <div class="form-outline">
                         <input class="form-control py-2" type="search" name="search" id="search">
@@ -39,19 +37,20 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                    <h5 class="modal-title" id="exampleModalLongTitle">Insert Image</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    @using (Html.BeginForm("Index",
-                  "Home",
-                  FormMethod.Post,
-                  new { enctype = "multipart/form-data" }))
+                    @using (Html.BeginForm("AddImage",
+                 "Home",
+                 FormMethod.Post,
+                 new { enctype = "multipart/form-data" }))
                     {
                         <label for="file">Upload Image:</label>
                         <input type="file" name="Image" id="Image" /><br><br>
+                        <label for="file">Description:</label>
                         <input type="text" name="Description" id="Description" /><br><br>
                         <input type="submit" value="Upload Image" />
                         <br><br>
@@ -64,7 +63,7 @@
             </div>
         </div>
     </div>
-
+    <!--Image table-->
     <table id="example" class="table">
         <thead>
             <tr>
@@ -94,10 +93,25 @@
                         @Html.DisplayFor(modelItem => item.Description)
                     </td>
                     <td>
-                        <form asp-action="Delete">
-                            <input type="hidden" value="@(item._id)" name="id" id="id" />
-                            <input type="submit" value="Delete" class="btn btn-danger" />
-                        </form>
+                        <div class="row">
+                            <div class="col-xs-6" style="margin-right:5px">
+                                <form asp-action="Delete">
+                                    <input type="hidden" value="@(item._id)" name="id" id="id" />
+                                    <input type="submit" value="Delete" class="btn btn-danger" />
+                                </form>
+                            </div>
+                            <div class="col-xs-6">
+                                @using (Html.BeginForm("GetImage",
+                                        "Home",
+                                        FormMethod.Get))
+                                {
+                                    
+                                        <input type="hidden" value="@(item._id)" name="id" id="id" />
+                                        <input type="submit" value="GetImage" class="btn btn-primary" />
+                                    
+                                }
+                                </div>
+                            </div>
                     </td>
                 </tr>
             }
@@ -109,6 +123,4 @@
 {
     <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
     <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
-    
-    
 }
