--- a/ImageRepo/Views/Shared/_LoginPartial.cshtml
+++ b/ImageRepo/Views/Shared/_LoginPartial.cshtml
@@ -1,26 +1,22 @@
-﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+﻿@using Microsoft.AspNetCore.Http
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 
 <ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
-{
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
-    </li>
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-        </form>
-    </li>
-}
-else
-{
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
-}
+    @if (HttpContextAccessor.HttpContext.Session.GetString("SessionUser") == null)
+    {
+        <li class="nav-item"style=" padding-left: 30px; padding-right: 30px;">
+            @Html.ActionLink("login", "login", "Home")
+        </li>
+        
+        <li class="nav-item">
+            @Html.ActionLink("register", "register", "Home")
+        </li>
+    }
+    else
+    {
+        <li class="nav-item">
+            @Html.ActionLink("logout", "logout", "Home")
+        </li>
+    }
+
 </ul>
